--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
-name: Hank Quinlan, Horrible Cop
+url: https://RuanHeleno.github.io
+
+# Site settings
+title: Ruan Heleno
+email: ruan-empreenderop@gmail.com
+description: "Portfólio sobre Ruan Heleno"
