--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "react": "^17.0.2",
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^17.0.2",
-    "react-grid-system": "^8.0.1",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
+    "react-skills": "^1.27.0",
     "styled-components": "^5.3.3",
     "typewriter-effect": "^2.18.2",
     "web-vitals": "^1.1.2",
