--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.4.0",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
@@ -15,10 +16,8 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "animate.css": "^4.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "^14.2.0",
-    "express": "^4.17.2",
-    "nodemailer": "^6.7.2",
+    "emailjs-com": "^3.2.0",
+    "mdb-react-ui-kit": "^2.3.0",
     "react": "^17.0.2",
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^17.0.2",
@@ -27,8 +26,8 @@
     "react-scripts": "4.0.3",
     "react-skills": "^1.27.0",
     "styled-components": "^5.3.3",
+    "sweetalert2": "^11.3.6",
     "typewriter-effect": "^2.18.2",
-    "web-vitals": "^1.1.2",
     "webfontloader": "^1.6.28"
   },
   "scripts": {
