--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "animate.css": "^4.1.1",
     "emailjs-com": "^3.2.0",
     "mdb-react-ui-kit": "^2.3.0",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^17.0.2",
